@@ -22,5 +22,5 @@ containerName.mapping=Path Mapping
 containerDescription.mapping=A path mapping.
 containerName.mapEntry=Path Map Entry
 containerDescription.mapEntry=An entry in a path mapping.
-containerName.directory=File System Directory With Subfolders
-containerDescription.directory=A directory in the local file system with the subfolders search option.
+containerName.directory=File System Directory
+containerDescription.directory=A directory in the local file system.
